Update Project Math 377 Fall 18 Exploration (Block 1) (1).ipynb

--- a/Project Math 377 Fall 18 Exploration (Block 1) (1).ipynb
+++ b/Project Math 377 Fall 18 Exploration (Block 1) (1).ipynb
@@ -1636,7 +1636,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "They mostly have to do with shopping, products or advertisements. It seems that some of the shopping is stuff the individuals signed up for and some is spam that might be targeting the same things."
+    "They mostly have to do with shopping, products or advertisements. It seems that some of the shopping is stuff the individuals signed up for and some is spam that might be targeting the same things. The most popular spam words definitely target advertisements, with words like free and adv. Popular ham words seem to come from stuff the person has signed up for. Satalk is specific and users implies that they have signed up for something. Some words, like new and ilug, suggest that the spam is based on the preferences of the individuals receiving the email."
    ]
   },
   {
