Update Math 377 Lesson 13.ipynb

--- a/Math 377 Lesson 13.ipynb
+++ b/Math 377 Lesson 13.ipynb
@@ -1814,7 +1814,7 @@
    "source": [
     "##### Example\n",
     "\n",
-    "1) What are the parameters of the beta distribution that make the distribution equivalent to $\\textsf{Unif}(0,1)$? "
+    "1) What are the parameters of the beta distribution that make the distribution equivalent to $\\textsf{Unif}(0,1)$?  Alpha and Beta must be 1. "
    ]
   }
  ],
