Update Math 377 Lesson 29-Warner Notebook.ipynb

--- a/Math 377 Lesson 29-Warner Notebook.ipynb
+++ b/Math 377 Lesson 29-Warner Notebook.ipynb
@@ -139,7 +139,7 @@
     "\n",
     "$L = \\prod{{20\\choose{x_{i}}}^n  p^{\\sum{x_{i}}}(1-p)^{\\sum{(20-x_{i})}}}$\n",
     "\n",
-    "$L = n \\log{(\\prod{20\\choose{x_{i}}})} +\\sum{x_{i}} \\log{p} + \\sum{(20-x_{i})}\\log{(1-p)}$\n",
+    "$L = n \\log{(20\\choose{x_{i}})} +\\sum{x_{i}} \\log{p} + \\sum{(20-x_{i})}\\log{(1-p)}$\n",
     "\n",
     "\n",
     "$\\frac{dL}{dp} = \\frac{\\sum{x_{i}}}{p} - \\frac{\\sum{(20-x_{i})}}{1-p} = 0$\n",
